feat: Add observability (OTEL, Grafana, Jaeger, Prometheus, seq, optional Kibana), Index page

--- a/src/DotNetAtlas.Domain/DotNetAtlas.Domain.csproj
+++ b/src/DotNetAtlas.Domain/DotNetAtlas.Domain.csproj
@@ -6,4 +6,7 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+        <ProjectReference Include="..\DotNetAtlas.Contracts\DotNetAtlas.Contracts.csproj"/>
+    </ItemGroup>
 </Project>
