--- a/src/DotNetAtlas.Api/DotNetAtlas.Api.csproj
+++ b/src/DotNetAtlas.Api/DotNetAtlas.Api.csproj
@@ -8,7 +8,14 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.7"/>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.7"/>
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.1.0"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\DotNetAtlas.Application\DotNetAtlas.Application.csproj"/>
+        <ProjectReference Include="..\DotNetAtlas.Infrastructure\DotNetAtlas.Infrastructure.csproj"/>
     </ItemGroup>
 
 </Project>
