--- a/src/DotNetAtlas.Application/DotNetAtlas.Application.csproj
+++ b/src/DotNetAtlas.Application/DotNetAtlas.Application.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+        <ProjectReference Include="..\DotNetAtlas.Contracts\DotNetAtlas.Contracts.csproj"/>
+        <ProjectReference Include="..\DotNetAtlas.Domain\DotNetAtlas.Domain.csproj"/>
+    </ItemGroup>
 </Project>
