feat! (api): Swap MinimalAPI for FastEndpoints, Swagger, client generation, openapi generation on build

--- a/Directory.Build.Dependencies.props
+++ b/Directory.Build.Dependencies.props
@@ -1,4 +1,5 @@
 <Project>
-  <PropertyGroup Label="Package Versions">
-  </PropertyGroup>
+    <PropertyGroup Label="Package Versions">
+        <FastEndpointsVersion>7.0.1</FastEndpointsVersion>
+    </PropertyGroup>
 </Project>
