--- a/src/DotNetAtlas.Contracts/DotNetAtlas.Contracts.csproj
+++ b/src/DotNetAtlas.Contracts/DotNetAtlas.Contracts.csproj
@@ -1,9 +1,16 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net9.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
+        <NoWarn>CS1591</NoWarn>
     </PropertyGroup>
+
+    <ItemGroup>
+        <PackageReference Include="FastEndpoints.Attributes" Version="$(FastEndpointsVersion)"/>
+        <PackageReference Include="FastEndpoints.Generator" Version="$(FastEndpointsVersion)">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+    </ItemGroup>
 
 </Project>
