--- a/src/DotNetAtlas.Api/DotNetAtlas.Api.csproj
+++ b/src/DotNetAtlas.Api/DotNetAtlas.Api.csproj
@@ -7,17 +7,25 @@
         <OpenApiGenerateDocumentsOptions>--file-name openapi</OpenApiGenerateDocumentsOptions>
         <OpenApiDocumentsDirectory>$(MSBuildProjectDirectory)</OpenApiDocumentsDirectory>
     </PropertyGroup>
-    
+
     <ItemGroup>
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="10.0.0-preview.6.25358.103"/>
         <PackageReference Include="Microsoft.Extensions.ApiDescription.Server" Version="10.0.0-preview.6.25358.103">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
-        <PackageReference Include="FastEndpoints" Version="$(FastEndpointsVersion)"/>
+
+        <PackageReference Include="Ardalis.SmartEnum.SystemTextJson" Version="8.1.0"/>
+
         <PackageReference Include="FastEndpoints.Security" Version="$(FastEndpointsVersion)"/>
         <PackageReference Include="FastEndpoints.Swagger" Version="$(FastEndpointsVersion)"/>
         <PackageReference Include="FastEndpoints.ClientGen.Kiota" Version="$(FastEndpointsVersion)"/>
         <PackageReference Include="FastEndpoints.Generator" Version="$(FastEndpointsVersion)">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+
+        <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.556">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
@@ -29,7 +37,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <_ContentIncludedByDefault Remove="openapi\openapi.json" />
+        <_ContentIncludedByDefault Remove="openapi\openapi.json"/>
     </ItemGroup>
 
 </Project>
