--- a/src/DotNetAtlas.Api/appsettings.json
+++ b/src/DotNetAtlas.Api/appsettings.json
@@ -10,8 +10,43 @@
     }
   },
   "Application": {
-    "AppName": "DotNetAtlas",
-    "CacheEnabled": true
+  "Authentication": {
+    "JwtBearer": {
+      "Authority": "http://localhost:9011",
+      "TokenValidationParameters": {
+        "ValidateIssuer": true,
+        "ValidIssuer": "cme.com",
+        "ValidateAudience": true,
+        "ValidAudience": "e9fdb985-9173-4e01-9d73-ac2d60d1dc8e",
+        "ValidateIssuerSigningKey": true,
+        "RequireSignedTokens": true,
+        "ValidateLifetime": true
+  },
+      "RequireHttpsMetadata": false
+    }
+  },
+  "Swagger": {
+    "OpenApiInfo": {
+      "Title": "DotNetAtlas",
+      "Description": "DotNet Atlas - Made with ❤️, Powered by ☕",
+      "Version": "v1",
+      "Contact": {
+        "Name": "David Capcuch",
+        "Url": "",
+        "Email": "d.capcuch@gmail.com"
+      },
+      "Licence": {
+        "Name": "All rights reserved",
+        "Url": ""
+      }
+    },
+    "OAuthConfig": {
+      "Authority": "http://localhost:9011",
+      "ClientId": "e9fdb985-9173-4e01-9d73-ac2d60d1dc8e",
+      "ClientSecret": "super-secret-secret-that-should-be-regenerated-for-production",
+      "ResponseType": "code",
+      "RequireHttpsMetadata": false
+    }
   },
   "AllowedHosts": "*"
 }
