--- a/src/DotNetAtlas.Domain/DotNetAtlas.Domain.csproj
+++ b/src/DotNetAtlas.Domain/DotNetAtlas.Domain.csproj
@@ -1,9 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-    <PropertyGroup>
-    </PropertyGroup>
-
     <ItemGroup>
-        <ProjectReference Include="..\DotNetAtlas.Contracts\DotNetAtlas.Contracts.csproj"/>
+        <PackageReference Include="FluentResults" Version="4.0.0" />
+
+        <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.556">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
     </ItemGroup>
 </Project>
