--- a/src/DotNetAtlas.Api/appsettings.json
+++ b/src/DotNetAtlas.Api/appsettings.json
@@ -10,6 +10,14 @@
     }
   },
   "Application": {
+    "AppName": "DotNetAtlas"
+  },
+  "DataEndpoint": {
+    "DefaultConnectionStringRef": "Weather"
+  },
+  "ConnectionStrings": {
+    "Weather": "Data Source=127.0.0.1,12345;Initial Catalog=Weather;Persist Security Info=False;User ID=sa;Password=breK3k3$;Encrypt=True;TrustServerCertificate=True"
+  },
   "Authentication": {
     "JwtBearer": {
       "Authority": "http://localhost:9011",
@@ -21,7 +29,7 @@
         "ValidateIssuerSigningKey": true,
         "RequireSignedTokens": true,
         "ValidateLifetime": true
-  },
+      },
       "RequireHttpsMetadata": false
     }
   },
