--- a/src/DotNetAtlas.Api/appsettings.Local.json
+++ b/src/DotNetAtlas.Api/appsettings.Local.json
@@ -5,5 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "OTEL_EXPORTER_OTLP_ENDPOINT": "http://localhost:4317"
+  "ConnectionStrings": {
+    "Weather": "Data Source=127.0.0.1,12345;Initial Catalog=Weather;Persist Security Info=False;User ID=sa;Password=breK3k3$;Encrypt=True;TrustServerCertificate=True"
+  }
 }
