--- a/src/DotNetAtlas.Infrastructure/DotNetAtlas.Infrastructure.csproj
+++ b/src/DotNetAtlas.Infrastructure/DotNetAtlas.Infrastructure.csproj
@@ -4,6 +4,10 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.7"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.7"/>
+        <PackageReference Include="EntityFrameworkCore.Exceptions.SqlServer" Version="8.1.3" />
+        <PackageReference Include="Bogus" Version="35.6.3"/>
         <PackageReference Include="Scrutor" Version="6.1.0"/>
 
         <PackageReference Include="OpenTelemetry.Exporter.Console" Version="1.12.0"/>
@@ -21,7 +25,6 @@
         <PackageReference Include="OpenTelemetry.Exporter.Prometheus.AspNetCore" Version="1.12.0-beta.1"/>
         <PackageReference Include="AspNetCore.SignalR.OpenTelemetry" Version="1.7.0"/>
 
-        <PackageReference Include="Serilog.AspNetCore" Version="9.0.0"/>
         <PackageReference Include="Serilog.Exceptions" Version="8.4.0"/>
         <PackageReference Include="Serilog.Exceptions.EntityFrameworkCore" Version="8.4.0"/>
         <PackageReference Include="Serilog.Extensions.Hosting" Version="9.0.0"/>
@@ -36,11 +39,15 @@
         <PackageReference Include="SerilogTracing" Version="2.3.1"/>
         <PackageReference Include="SerilogTracing.Expressions" Version="2.3.1"/>
         <PackageReference Include="Elastic.Serilog.Enrichers.Web" Version="8.18.*"/>
+
+        <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.556">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\DotNetAtlas.Contracts\DotNetAtlas.Contracts.csproj"/>
         <ProjectReference Include="..\DotNetAtlas.Application\DotNetAtlas.Application.csproj"/>
     </ItemGroup>
-    
+
 </Project>
