fix: Improve observability setup, change OpenAPI release name, restructuring

--- a/src/DotNetAtlas.Api/appsettings.json
+++ b/src/DotNetAtlas.Api/appsettings.json
@@ -56,5 +56,6 @@
       "RequireHttpsMetadata": false
     }
   },
+  "OTEL_EXPORTER_OTLP_ENDPOINT": "http://localhost:4317",
   "AllowedHosts": "*"
 }
