fix: improve launchSettings profiles

--- a/src/DotNetAtlas.Api/Properties/launchSettings.json
+++ b/src/DotNetAtlas.Api/Properties/launchSettings.json
@@ -1,19 +1,21 @@
 ﻿{
   "$schema": "https://json.schemastore.org/launchsettings.json",
   "profiles": {
-    "http": {
+    "DotNetAtlas.Api.Local.Http": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
+      "launchEndpointsUI": true,
       "applicationUrl": "http://localhost:5159",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Local"
       }
     },
-    "https": {
+    "DotNetAtlas.Api.Local.Https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
+      "launchEndpointsUI": true,
       "applicationUrl": "https://localhost:7095;http://localhost:5159",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Local"
