--- a/test/DotNetAtlas.Application.UnitTests/DotNetAtlas.Application.UnitTests.csproj
+++ b/test/DotNetAtlas.Application.UnitTests/DotNetAtlas.Application.UnitTests.csproj
@@ -1,9 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net9.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
         <IsPackable>false</IsPackable>
     </PropertyGroup>
 
@@ -13,16 +10,25 @@
         <PackageReference Include="xunit.v3" Version="3.0.0"/>
         <PackageReference Include="xunit.runner.visualstudio" Version="3.1.3"/>
         <PackageReference Include="xunit.analyzers" Version="1.23.0"/>
-        <PackageReference Include="FluentAssertions" Version="8.5.0"/>
+        <PackageReference Include="AwesomeAssertions" Version="9.1.0"/>
 
-        <PackageReference Include="FluentAssertions.Analyzers" Version="0.34.1">
+        <PackageReference Include="AwesomeAssertions.Analyzers" Version="9.0.3">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.556">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\..\src\DotNetAtlas.Application\DotNetAtlas.Application.csproj" />
+        <ProjectReference Include="..\test\DotNetAtlas.ArchitectureTests\DotNetAtlas.ArchitectureTests.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
         <Using Include="Xunit"/>
     </ItemGroup>
-    
+
 </Project>
