--- a/src/DotNetAtlas.Api/DotNetAtlas.Api.csproj
+++ b/src/DotNetAtlas.Api/DotNetAtlas.Api.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
@@ -9,23 +9,16 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="10.0.0-preview.6.25358.103"/>
-        <PackageReference Include="Microsoft.Extensions.ApiDescription.Server" Version="10.0.0-preview.6.25358.103">
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect"/>
+        <PackageReference Include="Microsoft.Extensions.ApiDescription.Server">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
-
-        <PackageReference Include="Ardalis.SmartEnum.SystemTextJson" Version="8.1.0"/>
-
-        <PackageReference Include="FastEndpoints.Security" Version="$(FastEndpointsVersion)"/>
-        <PackageReference Include="FastEndpoints.Swagger" Version="$(FastEndpointsVersion)"/>
-        <PackageReference Include="FastEndpoints.ClientGen.Kiota" Version="$(FastEndpointsVersion)"/>
-        <PackageReference Include="FastEndpoints.Generator" Version="$(FastEndpointsVersion)">
-            <PrivateAssets>all</PrivateAssets>
-            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageReference>
-
-        <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.556">
+        <PackageReference Include="Ardalis.SmartEnum.SystemTextJson"/>
+        <PackageReference Include="FastEndpoints.Security"/>
+        <PackageReference Include="FastEndpoints.Swagger"/>
+        <PackageReference Include="FastEndpoints.ClientGen.Kiota"/>
+        <PackageReference Include="FastEndpoints.Generator">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
