--- a/src/DotNetAtlas.Domain/DotNetAtlas.Domain.csproj
+++ b/src/DotNetAtlas.Domain/DotNetAtlas.Domain.csproj
@@ -1,11 +1,6 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
     <ItemGroup>
-        <PackageReference Include="FluentResults" Version="4.0.0" />
-
-        <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.556">
-            <PrivateAssets>all</PrivateAssets>
-            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageReference>
+        <PackageReference Include="FluentResults" />
     </ItemGroup>
 </Project>
