--- a/src/DotNetAtlas.Infrastructure/DotNetAtlas.Infrastructure.csproj
+++ b/src/DotNetAtlas.Infrastructure/DotNetAtlas.Infrastructure.csproj
@@ -4,50 +4,48 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.7"/>
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.7"/>
-        <PackageReference Include="EntityFrameworkCore.Exceptions.SqlServer" Version="8.1.3" />
-        <PackageReference Include="Bogus" Version="35.6.3"/>
-        <PackageReference Include="Scrutor" Version="6.1.0"/>
-
-        <PackageReference Include="OpenTelemetry.Exporter.Console" Version="1.12.0"/>
-        <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.12.0"/>
-        <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.12.0"/>
-        <PackageReference Include="OpenTelemetry.Extensions.Propagators" Version="1.12.0"/>
-        <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.12.0"/>
-        <PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.12.0"/>
-        <PackageReference Include="OpenTelemetry.Instrumentation.Runtime" Version="1.12.0"/>
-        <PackageReference Include="OpenTelemetry.Instrumentation.EntityFrameworkCore" Version="1.12.0-beta.1"/>
-        <PackageReference Include="OpenTelemetry.Instrumentation.Process" Version="1.12.0-beta.1"/>
-        <PackageReference Include="OpenTelemetry.Instrumentation.StackExchangeRedis" Version="1.12.0-beta.1"/>
-        <PackageReference Include="OpenTelemetry.Resources.Container" Version="1.12.0-beta.1"/>
-        <PackageReference Include="OpenTelemetry.Resources.Host" Version="1.12.0-beta.1"/>
-        <PackageReference Include="OpenTelemetry.Exporter.Prometheus.AspNetCore" Version="1.12.0-beta.1"/>
-        <PackageReference Include="AspNetCore.SignalR.OpenTelemetry" Version="1.7.0"/>
-
-        <PackageReference Include="Serilog.Exceptions" Version="8.4.0"/>
-        <PackageReference Include="Serilog.Exceptions.EntityFrameworkCore" Version="8.4.0"/>
-        <PackageReference Include="Serilog.Extensions.Hosting" Version="9.0.0"/>
-        <PackageReference Include="Serilog.Extensions.Logging" Version="9.0.2"/>
-        <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0"/>
-        <PackageReference Include="Serilog.Sinks.OpenTelemetry" Version="4.2.0"/>
-        <PackageReference Include="Serilog.Sinks.Elasticsearch" Version="10.0.0"/>
-        <PackageReference Include="Serilog.Sinks.Seq" Version="9.0.0"/>
-        <PackageReference Include="Serilog.Sinks.Async" Version="2.1.0"/>
-        <PackageReference Include="Serilog.Settings.Configuration" Version="9.0.0"/>
-        <PackageReference Include="Serilog.Expressions" Version="5.0.0"/>
-        <PackageReference Include="SerilogTracing" Version="2.3.1"/>
-        <PackageReference Include="SerilogTracing.Expressions" Version="2.3.1"/>
-        <PackageReference Include="Elastic.Serilog.Enrichers.Web" Version="8.18.*"/>
-
-        <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.556">
-            <PrivateAssets>all</PrivateAssets>
-            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
+        <PackageReference Include="EntityFrameworkCore.Exceptions.SqlServer" />
+        <PackageReference Include="Bogus" />
+        <PackageReference Include="Scrutor" />
+
+        <PackageReference Include="OpenTelemetry.Exporter.Console" />
+        <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" />
+        <PackageReference Include="OpenTelemetry.Extensions.Hosting" />
+        <PackageReference Include="OpenTelemetry.Extensions.Propagators" />
+        <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" />
+        <PackageReference Include="OpenTelemetry.Instrumentation.Http" />
+        <PackageReference Include="OpenTelemetry.Instrumentation.Runtime" />
+        <PackageReference Include="OpenTelemetry.Instrumentation.EntityFrameworkCore" />
+        <PackageReference Include="OpenTelemetry.Instrumentation.Process" />
+        <PackageReference Include="OpenTelemetry.Instrumentation.StackExchangeRedis" />
+        <PackageReference Include="OpenTelemetry.Resources.Container" />
+        <PackageReference Include="OpenTelemetry.Resources.Host" />
+        <PackageReference Include="OpenTelemetry.Exporter.Prometheus.AspNetCore" />
+        <PackageReference Include="AspNetCore.SignalR.OpenTelemetry" />
+
+        <PackageReference Include="Serilog.Exceptions" />
+        <PackageReference Include="Serilog.Exceptions.EntityFrameworkCore" />
+        <PackageReference Include="Serilog.Extensions.Hosting" />
+        <PackageReference Include="Serilog.Extensions.Logging" />
+        <PackageReference Include="Serilog.Sinks.Console" />
+        <PackageReference Include="Serilog.Sinks.OpenTelemetry" />
+        <PackageReference Include="Serilog.Sinks.Elasticsearch" />
+        <PackageReference Include="Serilog.Sinks.Seq" />
+        <PackageReference Include="Serilog.Sinks.Async" />
+        <PackageReference Include="Serilog.Settings.Configuration" />
+        <PackageReference Include="Serilog.Expressions" />
+        <PackageReference Include="SerilogTracing" />
+        <PackageReference Include="SerilogTracing.Expressions" />
+        <PackageReference Include="Elastic.Serilog.Enrichers.Web" />
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\DotNetAtlas.Application\DotNetAtlas.Application.csproj"/>
+        <ProjectReference Include="..\DotNetAtlas.Application\DotNetAtlas.Application.csproj" />
     </ItemGroup>
 
 </Project>
