--- a/test/DotNetAtlas.Api.FunctionalTests/DotNetAtlas.Api.FunctionalTests.csproj
+++ b/test/DotNetAtlas.Api.FunctionalTests/DotNetAtlas.Api.FunctionalTests.csproj
@@ -1,40 +1,36 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <IsPackable>false</IsPackable>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="coverlet.collector" Version="6.0.4"/>
-        <PackageReference Include="FastEndpoints.Testing" Version="7.0.1"/>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.1"/>
-        <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="10.0.0-preview.7.25380.108" />
-        <PackageReference Include="xunit.v3" Version="3.0.0"/>
-        <PackageReference Include="xunit.runner.visualstudio" Version="3.1.3"/>
-        <PackageReference Include="xunit.analyzers" Version="1.23.0"/>
-        <PackageReference Include="Evolve" Version="3.2.0" />
-        <PackageReference Include="Testcontainers.MsSql" Version="4.6.0" />
-        <PackageReference Include="Serilog.Sinks.XUnit.Injectable" Version="4.0.129" />
-        <PackageReference Include="Respawn" Version="6.2.1" />
-        <PackageReference Include="AwesomeAssertions" Version="9.1.0"/>
+        <PackageReference Include="coverlet.collector" />
+        <PackageReference Include="FastEndpoints.Testing" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" />
+        <PackageReference Include="xunit.v3" />
+        <PackageReference Include="xunit.runner.visualstudio" />
+        <PackageReference Include="xunit.analyzers" />
+        <PackageReference Include="Evolve" />
+        <PackageReference Include="Testcontainers.MsSql" />
+        <PackageReference Include="Serilog.Sinks.XUnit.Injectable" />
+        <PackageReference Include="Respawn" />
+        <PackageReference Include="AwesomeAssertions" />
 
-        <PackageReference Include="AwesomeAssertions.Analyzers" Version="9.0.3">
-            <PrivateAssets>all</PrivateAssets>
-            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageReference>
-        <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.556">
+        <PackageReference Include="AwesomeAssertions.Analyzers">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\src\DotNetAtlas.Api\DotNetAtlas.Api.csproj"/>
+        <ProjectReference Include="..\..\src\DotNetAtlas.Api\DotNetAtlas.Api.csproj" />
         <ProjectReference Include="..\DotNetAtlas.ArchitectureTests\DotNetAtlas.ArchitectureTests.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-        <Using Include="Xunit"/>
+        <Using Include="Xunit" />
     </ItemGroup>
 
 </Project>
