--- a/test/DotNetAtlas.Domain.UnitTests/DotNetAtlas.Domain.UnitTests.csproj
+++ b/test/DotNetAtlas.Domain.UnitTests/DotNetAtlas.Domain.UnitTests.csproj
@@ -5,30 +5,32 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="coverlet.collector" Version="6.0.4"/>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.1"/>
-        <PackageReference Include="xunit.v3" Version="3.0.0"/>
-        <PackageReference Include="xunit.runner.visualstudio" Version="3.1.3"/>
-        <PackageReference Include="xunit.analyzers" Version="1.23.0"/>
-        <PackageReference Include="FluentResults.Extensions.FluentAssertions" Version="2.2.1" />
-        <PackageReference Include="AwesomeAssertions" Version="9.1.0"/>
-
-        <PackageReference Include="AwesomeAssertions.Analyzers" Version="9.0.3">
-            <PrivateAssets>all</PrivateAssets>
-            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        <PackageReference Include="coverlet.collector" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" />
+        <PackageReference Include="xunit.v3" />
+        <PackageReference Include="xunit.runner.visualstudio">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.556">
+        <PackageReference Include="xunit.analyzers">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="FluentResults.Extensions.FluentAssertions" />
+        <PackageReference Include="AwesomeAssertions" />
+
+        <PackageReference Include="AwesomeAssertions.Analyzers">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\src\DotNetAtlas.Domain\DotNetAtlas.Domain.csproj"/>
+        <ProjectReference Include="..\..\src\DotNetAtlas.Domain\DotNetAtlas.Domain.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-        <Using Include="Xunit"/>
+        <Using Include="Xunit" />
     </ItemGroup>
 
 </Project>
