feat: Improve CORS, add SecurityHeaders, move Auth to infra, StyleCop analyzer per project to correctly show suggestions

--- a/src/DotNetAtlas.Api/appsettings.json
+++ b/src/DotNetAtlas.Api/appsettings.json
@@ -53,6 +53,16 @@
       "RequireHttpsMetadata": false
     }
   },
+  "Cors": {
+    "AllowedOrigins": [
+      "http://localhost:5159",
+      "https://localhost:7095"
+    ],
+    "AllowedMethods": ["*"],
+    "AllowedHeaders": ["*"],
+    "ExposedHeaders": [],
+    "AllowCredentials": true
+  },
   "OTEL_EXPORTER_OTLP_ENDPOINT": "http://localhost:4317",
   "AllowedHosts": "*"
 }
