--- a/src/DotNetAtlas.Api/DotNetAtlas.Api.csproj
+++ b/src/DotNetAtlas.Api/DotNetAtlas.Api.csproj
@@ -9,16 +9,20 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect"/>
         <PackageReference Include="Microsoft.Extensions.ApiDescription.Server">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
-        <PackageReference Include="Ardalis.SmartEnum.SystemTextJson"/>
+        <PackageReference Include="NetEscapades.AspNetCore.SecurityHeaders"/>
         <PackageReference Include="FastEndpoints.Security"/>
         <PackageReference Include="FastEndpoints.Swagger"/>
         <PackageReference Include="FastEndpoints.ClientGen.Kiota"/>
         <PackageReference Include="FastEndpoints.Generator">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+
+        <PackageReference Include="StyleCop.Analyzers">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
