--- a/src/DotNetAtlas.Domain/DotNetAtlas.Domain.csproj
+++ b/src/DotNetAtlas.Domain/DotNetAtlas.Domain.csproj
@@ -1,6 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <ItemGroup>
-        <PackageReference Include="FluentResults" />
+        <PackageReference Include="FluentResults"/>
+
+        <PackageReference Include="StyleCop.Analyzers">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
     </ItemGroup>
 </Project>
