--- a/test/DotNetAtlas.Application.UnitTests/DotNetAtlas.Application.UnitTests.csproj
+++ b/test/DotNetAtlas.Application.UnitTests/DotNetAtlas.Application.UnitTests.csproj
@@ -16,6 +16,10 @@
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
+        <PackageReference Include="StyleCop.Analyzers">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
     </ItemGroup>
 
     <ItemGroup>
