--- a/src/DotNetAtlas.Api/appsettings.json
+++ b/src/DotNetAtlas.Api/appsettings.json
@@ -5,8 +5,9 @@
       "Override": {
         "Microsoft": "Warning",
         "Polly": "Warning",
-        "Microsoft.AspNetCore.SignalR": "Debug",
-        "Microsoft.AspNetCore.Http.Connections": "Debug"
+        "Microsoft.AspNetCore.SignalR": "Information",
+        "Microsoft.AspNetCore.Http.Connections": "Information",
+        "ZiggyCreatures.Caching.Fusion": "Information"
       }
     }
   },
@@ -60,8 +61,12 @@
       "https://localhost:7095"
     ],
     "AllowWildcardSubdomains": true,
-    "AllowedMethods": ["*"],
-    "AllowedHeaders": ["*"],
+    "AllowedMethods": [
+      "*"
+    ],
+    "AllowedHeaders": [
+      "*"
+    ],
     "ExposedHeaders": [],
     "AllowCredentials": true
   },
@@ -78,7 +83,30 @@
   "Weather": {
     "Hedging": {
       "PrimaryMaxDurationMs": 200
+    },
+    "ForecastCache": {
+      "DurationMinutes": 720,
+      "EnableFailSafe": true,
+      "FailSafeMaxDurationMinutes": 120,
+      "FailSafeThrottleSeconds": 10,
+      "FactorySoftTimeoutMs": 100,
+      "FactoryHardTimeoutMs": 2000,
+      "EagerRefreshThreshold": 0.9
     }
+  },
+  "DefaultCache": {
+    "DistributedCacheCircuitBreakerSeconds": 2,
+    "IncludeTagsInLogs": true,
+    "IncludeTagsInTraces": true,
+    "IncludeTagsInMetrics": true,
+    "DefaultDurationMinutes": 1,
+    "FactorySoftTimeoutMs": 100,
+    "FactoryHardTimeoutMs": 1500,
+    "DistributedCacheSoftTimeoutSeconds": 1,
+    "DistributedCacheHardTimeoutSeconds": 2,
+    "AllowBackgroundDistributedCacheOperations": true,
+    "AllowBackgroundBackplaneOperations": true,
+    "JitterMaxDurationSeconds": 2
   },
   "HttpResilience": {
     "TotalRequestTimeoutSeconds": 20,
