--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -23,18 +23,20 @@
         <PackageVersion Include="FluentResults.Extensions.FluentAssertions" Version="2.2.1"/>
         <PackageVersion Include="FluentValidation" Version="12.0.0"/>
         <PackageVersion Include="FluentValidation.DependencyInjectionExtensions" Version="12.0.0"/>
+        <PackageVersion Include="MemoryPack.Core" Version="1.21.4"/>
         <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="10.0.0-rc.1.25451.107"/>
         <PackageVersion Include="Microsoft.AspNetCore.Authentication.Negotiate" Version="10.0.0-rc.1.25451.107"/>
         <PackageVersion Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="10.0.0-rc.1.25451.107"/>
         <PackageVersion Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="10.0.0-rc.1.25451.107"/>
         <PackageVersion Include="Microsoft.AspNetCore.Mvc.Testing" Version="10.0.0-rc.1.25451.107"/>
+        <PackageVersion Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="10.0.0-rc.1.25451.107"/>
         <PackageVersion Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="10.0.0-rc.1.25451.107"/>
         <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="10.0.0-rc.1.25451.107"/>
         <PackageVersion Include="Microsoft.EntityFrameworkCore.SqlServer" Version="10.0.0-rc.1.25451.107"/>
         <PackageVersion Include="Microsoft.Extensions.ApiDescription.Server" Version="10.0.0-rc.1.25451.107"/>
         <PackageVersion Include="Microsoft.Extensions.Http.Resilience" Version="9.9.0"/>
         <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.14.1"/>
-        <PackageVersion Include="NetEscapades.AspNetCore.SecurityHeaders" Version="1.1.0" />
+        <PackageVersion Include="NetEscapades.AspNetCore.SecurityHeaders" Version="1.1.0"/>
         <PackageVersion Include="NetArchTest.eNhancedEdition" Version="1.4.5"/>
         <PackageVersion Include="NSubstitute" Version="5.3.0"/>
         <PackageVersion Include="NSubstitute.Analyzers.CSharp" Version="1.0.17"/>
@@ -71,8 +73,14 @@
         <PackageVersion Include="SerilogTracing.Expressions" Version="2.3.1"/>
         <PackageVersion Include="StyleCop.Analyzers" Version="1.2.0-beta.556"/>
         <PackageVersion Include="Testcontainers.MsSql" Version="4.7.0"/>
+        <PackageVersion Include="Testcontainers.Redis" Version="4.7.0"/>
         <PackageVersion Include="xunit.analyzers" Version="1.24.0"/>
         <PackageVersion Include="xunit.runner.visualstudio" Version="3.1.4"/>
         <PackageVersion Include="xunit.v3" Version="3.0.1"/>
+        <PackageVersion Include="ZiggyCreatures.FusionCache" Version="2.4.0"/>
+        <PackageVersion Include="ZiggyCreatures.FusionCache.AspNetCore.OutputCaching" Version="2.4.0"/>
+        <PackageVersion Include="ZiggyCreatures.FusionCache.Backplane.StackExchangeRedis" Version="2.4.0"/>
+        <PackageVersion Include="ZiggyCreatures.FusionCache.OpenTelemetry" Version="2.4.0"/>
+        <PackageVersion Include="ZiggyCreatures.FusionCache.Serialization.CysharpMemoryPack" Version="2.4.0"/>
     </ItemGroup>
 </Project>
