--- a/src/DotNetAtlas.Api/appsettings.Local.json
+++ b/src/DotNetAtlas.Api/appsettings.Local.json
@@ -1,11 +1,19 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Override": {
+        "Microsoft": "Warning",
+        "Polly": "Warning",
+        "Microsoft.AspNetCore": "Warning",
+        "Microsoft.AspNetCore.SignalR": "Debug",
+        "Microsoft.AspNetCore.Http.Connections": "Debug",
+        "ZiggyCreatures.Caching.Fusion": "Debug"
+      }
     }
   },
   "ConnectionStrings": {
-    "Weather": "Data Source=127.0.0.1,12345;Initial Catalog=Weather;Persist Security Info=False;User ID=sa;Password=breK3k3$;Encrypt=True;TrustServerCertificate=True"
+    "Weather": "Data Source=127.0.0.1,12345;Initial Catalog=Weather;Persist Security Info=False;User ID=sa;Password=breK3k3$;Encrypt=True;TrustServerCertificate=True",
+    "Redis": "localhost:12346,defaultDatabase=0,allowAdmin=true"
   }
 }
