--- a/src/DotNetAtlas.Infrastructure/DotNetAtlas.Infrastructure.csproj
+++ b/src/DotNetAtlas.Infrastructure/DotNetAtlas.Infrastructure.csproj
@@ -4,49 +4,53 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" />
-        <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" />
-        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" />
-        <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" />
-        <PackageReference Include="Microsoft.Extensions.Http.Resilience" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer"/>
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect"/>
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer"/>
+        <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis"/>
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions"/>
+        <PackageReference Include="Microsoft.Extensions.Http.Resilience"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design">
-          <PrivateAssets>all</PrivateAssets>
-          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <PackageReference Include="Ardalis.SmartEnum.SystemTextJson"/>
-        <PackageReference Include="EntityFrameworkCore.Exceptions.SqlServer" />
-        <PackageReference Include="Bogus" />
-        <PackageReference Include="Scrutor" />
+        <PackageReference Include="EntityFrameworkCore.Exceptions.SqlServer"/>
+        <PackageReference Include="Bogus"/>
+        <PackageReference Include="Scrutor"/>
 
-        <PackageReference Include="OpenTelemetry.Exporter.Console" />
-        <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" />
-        <PackageReference Include="OpenTelemetry.Extensions.Hosting" />
-        <PackageReference Include="OpenTelemetry.Extensions.Propagators" />
-        <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" />
-        <PackageReference Include="OpenTelemetry.Instrumentation.Http" />
-        <PackageReference Include="OpenTelemetry.Instrumentation.Runtime" />
-        <PackageReference Include="OpenTelemetry.Instrumentation.EntityFrameworkCore" />
-        <PackageReference Include="OpenTelemetry.Instrumentation.Process" />
-        <PackageReference Include="OpenTelemetry.Instrumentation.StackExchangeRedis" />
-        <PackageReference Include="OpenTelemetry.Resources.Container" />
-        <PackageReference Include="OpenTelemetry.Resources.Host" />
-        <PackageReference Include="OpenTelemetry.Exporter.Prometheus.AspNetCore" />
-        <PackageReference Include="AspNetCore.SignalR.OpenTelemetry" />
+        <PackageReference Include="OpenTelemetry.Exporter.Console"/>
+        <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol"/>
+        <PackageReference Include="OpenTelemetry.Extensions.Hosting"/>
+        <PackageReference Include="OpenTelemetry.Extensions.Propagators"/>
+        <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore"/>
+        <PackageReference Include="OpenTelemetry.Instrumentation.Http"/>
+        <PackageReference Include="OpenTelemetry.Instrumentation.Runtime"/>
+        <PackageReference Include="OpenTelemetry.Instrumentation.EntityFrameworkCore"/>
+        <PackageReference Include="OpenTelemetry.Instrumentation.Process"/>
+        <PackageReference Include="OpenTelemetry.Instrumentation.StackExchangeRedis"/>
+        <PackageReference Include="OpenTelemetry.Resources.Container"/>
+        <PackageReference Include="OpenTelemetry.Resources.Host"/>
+        <PackageReference Include="OpenTelemetry.Exporter.Prometheus.AspNetCore"/>
+        <PackageReference Include="AspNetCore.SignalR.OpenTelemetry"/>
 
-        <PackageReference Include="Serilog.Exceptions" />
-        <PackageReference Include="Serilog.Exceptions.EntityFrameworkCore" />
-        <PackageReference Include="Serilog.Extensions.Hosting" />
-        <PackageReference Include="Serilog.Extensions.Logging" />
-        <PackageReference Include="Serilog.Sinks.Console" />
-        <PackageReference Include="Serilog.Sinks.OpenTelemetry" />
-        <PackageReference Include="Serilog.Sinks.Elasticsearch" />
-        <PackageReference Include="Serilog.Sinks.Seq" />
-        <PackageReference Include="Serilog.Sinks.Async" />
-        <PackageReference Include="Serilog.Settings.Configuration" />
-        <PackageReference Include="Serilog.Expressions" />
-        <PackageReference Include="SerilogTracing" />
-        <PackageReference Include="SerilogTracing.Expressions" />
-        <PackageReference Include="Elastic.Serilog.Enrichers.Web" />
+        <PackageReference Include="Serilog.Exceptions"/>
+        <PackageReference Include="Serilog.Exceptions.EntityFrameworkCore"/>
+        <PackageReference Include="Serilog.Extensions.Hosting"/>
+        <PackageReference Include="Serilog.Extensions.Logging"/>
+        <PackageReference Include="Serilog.Sinks.Console"/>
+        <PackageReference Include="Serilog.Sinks.OpenTelemetry"/>
+        <PackageReference Include="Serilog.Sinks.Elasticsearch"/>
+        <PackageReference Include="Serilog.Sinks.Seq"/>
+        <PackageReference Include="Serilog.Sinks.Async"/>
+        <PackageReference Include="Serilog.Settings.Configuration"/>
+        <PackageReference Include="Serilog.Expressions"/>
+        <PackageReference Include="SerilogTracing"/>
+        <PackageReference Include="SerilogTracing.Expressions"/>
+        <PackageReference Include="Elastic.Serilog.Enrichers.Web"/>
+        <PackageReference Include="ZiggyCreatures.FusionCache.AspNetCore.OutputCaching" />
+        <PackageReference Include="ZiggyCreatures.FusionCache.Backplane.StackExchangeRedis"/>
+        <PackageReference Include="ZiggyCreatures.FusionCache.OpenTelemetry"/>
 
         <PackageReference Include="StyleCop.Analyzers">
             <PrivateAssets>all</PrivateAssets>
@@ -55,7 +59,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\DotNetAtlas.Application\DotNetAtlas.Application.csproj" />
+        <ProjectReference Include="..\DotNetAtlas.Application\DotNetAtlas.Application.csproj"/>
     </ItemGroup>
 
 </Project>
