--- a/test/DotNetAtlas.IntegrationTests/DotNetAtlas.IntegrationTests.csproj
+++ b/test/DotNetAtlas.IntegrationTests/DotNetAtlas.IntegrationTests.csproj
@@ -9,6 +9,7 @@
         <PackageReference Include="FastEndpoints.Testing" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" />
+        <PackageReference Include="Testcontainers.Redis" />
         <PackageReference Include="xunit.v3" />
         <PackageReference Include="xunit.runner.visualstudio" />
         <PackageReference Include="xunit.analyzers" />
