--- a/src/prometheus/prometheus-config.yaml
+++ b/src/prometheus/prometheus-config.yaml
@@ -12,6 +12,16 @@ scrape_configs:
     static_configs:
       - targets: ['otel-collector:8889']  # OTLP Prometheus exporter endpoint
 
+  - job_name: 'dotnetatlas-healthchecks'
+    scrape_interval: 10s
+    scrape_timeout: 9s
+    metrics_path: /api/health/prometheus
+    static_configs:
+      - targets: ['host.docker.internal:5159']
+        labels:
+          app: dotnetatlas-api
+          kind: healthchecks
+
 otlp:
   promote_resource_attributes:
     - service.instance.id
