refactor: Restructurize folders, add centralized DiagnosticNames for tracing, extract reusable City and Feedback validators

--- a/src/DotNetAtlas.Api/appsettings.json
+++ b/src/DotNetAtlas.Api/appsettings.json
@@ -56,10 +56,11 @@
   },
   "Swagger": {
     "OpenApiInfo": {
-      "Title": "DotNetAtlas",
+      "Title": "DotNetAtlas API",
       "Description": "DotNet Atlas - Made with ❤️, Powered by ☕",
       "Version": "v1",
       "ServerUrl": "http://localhost:5159",
+      "DocumentName": "Release 1 2025-08-04",
       "Contact": {
         "Name": "David Capcuch",
         "Url": "",
@@ -98,7 +99,7 @@
   },
   "Weather": {
     "Hedging": {
-      "PrimaryMaxDurationMs": 200
+      "PrimaryMaxDurationMs": 300
     },
     "ForecastCache": {
       "DurationMinutes": 720,
