feat: Implement SignalR Weather Alerts with MessagePack protocol, HangFire for alert jobs, group management using Redis with atomic lua scripts

--- a/src/DotNetAtlas.Api/appsettings.json
+++ b/src/DotNetAtlas.Api/appsettings.json
@@ -134,6 +134,11 @@
     "CircuitBreakerFailureRatio": 0.2,
     "CircuitBreakerBreakSeconds": 5
   },
+  "Jobs": {
+    "FakeWeatherAlert": {
+      "Cron": "*/10 * * * * *"
+    }
+  },
   "OTEL_EXPORTER_OTLP_ENDPOINT": "http://localhost:4317",
   "AllowedHosts": "*"
 }
