--- a/src/DotNetAtlas.Api/appsettings.Local.json
+++ b/src/DotNetAtlas.Api/appsettings.Local.json
@@ -1,15 +1,20 @@
 {
   "Serilog": {
     "MinimumLevel": {
-      "Default": "Information",
+      "Default": "Debug",
       "Override": {
         "Microsoft": "Warning",
         "Polly": "Warning",
+        "Microsoft.AspNetCore.Diagnostics": "Information",
         "Microsoft.AspNetCore": "Warning",
         "Microsoft.AspNetCore.SignalR": "Debug",
         "Microsoft.AspNetCore.Http.Connections": "Debug",
         "ZiggyCreatures.Caching.Fusion": "Debug"
       }
     }
+  },
+  "ConnectionStrings": {
+    "Weather": "Data Source=127.0.0.1,12345;Initial Catalog=Weather;Persist Security Info=False;User ID=sa;Password=breK3k3$;Encrypt=True;TrustServerCertificate=True",
+    "Redis": "localhost:12346,defaultDatabase=0,allowAdmin=true,connectTimeout=2000,syncTimeout=2000,abortConnect=false"
   }
 }
