--- a/src/DotNetAtlas.Infrastructure/DotNetAtlas.Infrastructure.csproj
+++ b/src/DotNetAtlas.Infrastructure/DotNetAtlas.Infrastructure.csproj
@@ -5,19 +5,23 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="AspNetCore.HealthChecks.OpenIdConnectServer" />
-        <PackageReference Include="AspNetCore.HealthChecks.Redis" />
-        <PackageReference Include="AspNetCore.HealthChecks.UI" />
-        <PackageReference Include="AspNetCore.HealthChecks.UI.Client" />
-        <PackageReference Include="AspNetCore.HealthChecks.UI.SqlServer.Storage" />
-        <PackageReference Include="AspNetCore.HealthChecks.Uris" />
-        <PackageReference Include="AspNetCore.HealthChecks.Prometheus.Metrics" />
+        <PackageReference Include="AspNetCore.HealthChecks.Hangfire"/>
+        <PackageReference Include="AspNetCore.HealthChecks.OpenIdConnectServer"/>
+        <PackageReference Include="AspNetCore.HealthChecks.Redis"/>
+        <PackageReference Include="AspNetCore.HealthChecks.UI"/>
+        <PackageReference Include="AspNetCore.HealthChecks.UI.Client"/>
+        <PackageReference Include="AspNetCore.HealthChecks.UI.SqlServer.Storage"/>
+        <PackageReference Include="AspNetCore.HealthChecks.Uris"/>
+        <PackageReference Include="AspNetCore.HealthChecks.Prometheus.Metrics"/>
+        <PackageReference Include="Hangfire.SqlServer"/>
+        <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.MessagePack"/>
+        <PackageReference Include="Microsoft.AspNetCore.SignalR.StackExchangeRedis"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer"/>
         <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect"/>
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer"/>
         <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis"/>
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions"/>
-        <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.EntityFrameworkCore" />
+        <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.EntityFrameworkCore"/>
         <PackageReference Include="Microsoft.Extensions.Http.Resilience"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design">
             <PrivateAssets>all</PrivateAssets>
@@ -26,13 +30,16 @@
         <PackageReference Include="Ardalis.SmartEnum.SystemTextJson"/>
         <PackageReference Include="EntityFrameworkCore.Exceptions.SqlServer"/>
         <PackageReference Include="Bogus"/>
+        <PackageReference Include="Hangfire.AspNetCore"/>
         <PackageReference Include="Scrutor"/>
 
+        <PackageReference Include="AspNetCore.SignalR.OpenTelemetry"/>
         <PackageReference Include="OpenTelemetry.Exporter.Console"/>
         <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol"/>
         <PackageReference Include="OpenTelemetry.Extensions.Hosting"/>
         <PackageReference Include="OpenTelemetry.Extensions.Propagators"/>
         <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore"/>
+        <PackageReference Include="OpenTelemetry.Instrumentation.Hangfire"/>
         <PackageReference Include="OpenTelemetry.Instrumentation.Http"/>
         <PackageReference Include="OpenTelemetry.Instrumentation.Runtime"/>
         <PackageReference Include="OpenTelemetry.Instrumentation.EntityFrameworkCore"/>
@@ -40,7 +47,6 @@
         <PackageReference Include="OpenTelemetry.Instrumentation.StackExchangeRedis"/>
         <PackageReference Include="OpenTelemetry.Resources.Container"/>
         <PackageReference Include="OpenTelemetry.Resources.Host"/>
-        <PackageReference Include="AspNetCore.SignalR.OpenTelemetry"/>
 
         <PackageReference Include="Serilog.Exceptions"/>
         <PackageReference Include="Serilog.Exceptions.EntityFrameworkCore"/>
@@ -56,7 +62,8 @@
         <PackageReference Include="SerilogTracing"/>
         <PackageReference Include="SerilogTracing.Expressions"/>
         <PackageReference Include="Elastic.Serilog.Enrichers.Web"/>
-        <PackageReference Include="ZiggyCreatures.FusionCache.AspNetCore.OutputCaching" />
+
+        <PackageReference Include="ZiggyCreatures.FusionCache.AspNetCore.OutputCaching"/>
         <PackageReference Include="ZiggyCreatures.FusionCache.Backplane.StackExchangeRedis"/>
         <PackageReference Include="ZiggyCreatures.FusionCache.OpenTelemetry"/>
 
@@ -68,6 +75,11 @@
 
     <ItemGroup>
         <ProjectReference Include="..\DotNetAtlas.Application\DotNetAtlas.Application.csproj"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <InternalsVisibleTo Include="DotNetAtlas.FunctionalTests"/>
+        <InternalsVisibleTo Include="DotNetAtlas.IntegrationTests"/>
     </ItemGroup>
 
 </Project>
