--- a/.editorconfig
+++ b/.editorconfig
@@ -359,8 +359,14 @@ dotnet_diagnostic.SA0001.severity = none
 # SA1201: Elements should appear in the correct order
 dotnet_diagnostic.SA1201.severity = none
 
+#Error SA1512 : Single-line comments should not be followed by blank line
+dotnet_diagnostic.SA1512.severity = none
+
 # SA1516: Elements should be separated by new line
 dotnet_diagnostic.SA1516.severity = none
+
+# SA1515: Comments should be preceded by blank line
+dotnet_diagnostic.SA1515.severity = none
 
 # SA1501: Line break lambdas
 dotnet_diagnostic.SA1501.severity = none
