--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -5,6 +5,7 @@
     <ItemGroup>
         <PackageVersion Include="Ardalis.SmartEnum.SystemTextJson" Version="8.1.0"/>
         <PackageVersion Include="Ardalis.Specification.EntityFrameworkCore" Version="9.3.1"/>
+        <PackageVersion Include="AspNetCore.HealthChecks.Hangfire" Version="9.0.0"/>
         <PackageVersion Include="AspNetCore.HealthChecks.OpenIdConnectServer" Version="9.0.0"/>
         <PackageVersion Include="AspNetCore.HealthChecks.Redis" Version="9.0.0"/>
         <PackageVersion Include="AspNetCore.HealthChecks.UI.Client" Version="9.0.0"/>
@@ -13,29 +14,27 @@
         <PackageVersion Include="AspNetCore.HealthChecks.Prometheus.Metrics" Version="9.0.0"/>
         <PackageVersion Include="AspNetCore.HealthChecks.Uris" Version="9.0.0"/>
         <PackageVersion Include="AspNetCore.SignalR.OpenTelemetry" Version="1.7.0"/>
-        <PackageVersion Include="AwesomeAssertions" Version="9.1.0"/>
-        <PackageVersion Include="AwesomeAssertions.Analyzers" Version="9.0.3"/>
         <PackageVersion Include="Bogus" Version="35.6.3"/>
-        <PackageVersion Include="coverlet.collector" Version="6.0.4"/>
         <PackageVersion Include="Elastic.Serilog.Enrichers.Web" Version="9.0.0"/>
         <PackageVersion Include="EntityFrameworkCore.Exceptions.SqlServer" Version="8.1.3"/>
-        <PackageVersion Include="Evolve" Version="3.2.0"/>
         <PackageVersion Include="FastEndpoints.Attributes" Version="7.0.1"/>
         <PackageVersion Include="FastEndpoints.ClientGen.Kiota" Version="7.0.1"/>
         <PackageVersion Include="FastEndpoints.Generator" Version="7.0.1"/>
         <PackageVersion Include="FastEndpoints.Security" Version="7.0.1"/>
         <PackageVersion Include="FastEndpoints.Swagger" Version="7.0.1"/>
-        <PackageVersion Include="FastEndpoints.Testing" Version="7.0.1"/>
         <PackageVersion Include="FluentResults" Version="4.0.0"/>
-        <PackageVersion Include="FluentResults.Extensions.FluentAssertions" Version="2.2.1"/>
         <PackageVersion Include="FluentValidation" Version="12.0.0"/>
         <PackageVersion Include="FluentValidation.DependencyInjectionExtensions" Version="12.0.0"/>
+        <PackageVersion Include="Hangfire.AspNetCore" Version="1.8.21"/>
+        <PackageVersion Include="Hangfire.SqlServer" Version="1.8.21"/>
         <PackageVersion Include="MemoryPack.Core" Version="1.21.4"/>
+        <PackageVersion Include="MessagePack.Annotations" Version="2.5.187"/>
         <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="10.0.0-rc.1.25451.107"/>
         <PackageVersion Include="Microsoft.AspNetCore.Authentication.Negotiate" Version="10.0.0-rc.1.25451.107"/>
         <PackageVersion Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="10.0.0-rc.1.25451.107"/>
         <PackageVersion Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="10.0.0-rc.1.25451.107"/>
-        <PackageVersion Include="Microsoft.AspNetCore.Mvc.Testing" Version="10.0.0-rc.1.25451.107"/>
+        <PackageVersion Include="Microsoft.AspNetCore.SignalR.Protocols.MessagePack" Version="10.0.0-rc.1.25451.107"/>
+        <PackageVersion Include="Microsoft.AspNetCore.SignalR.StackExchangeRedis" Version="10.0.0-rc.1.25451.107"/>
         <PackageVersion Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="10.0.0-rc.1.25451.107"/>
         <PackageVersion Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="10.0.0-rc.1.25451.107"/>
         <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="10.0.0-rc.1.25451.107"/>
@@ -43,11 +42,7 @@
         <PackageVersion Include="Microsoft.Extensions.ApiDescription.Server" Version="10.0.0-rc.1.25451.107"/>
         <PackageVersion Include="Microsoft.Extensions.Diagnostics.HealthChecks.EntityFrameworkCore" Version="10.0.0-rc.1.25451.107"/>
         <PackageVersion Include="Microsoft.Extensions.Http.Resilience" Version="9.9.0"/>
-        <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.14.1"/>
         <PackageVersion Include="NetEscapades.AspNetCore.SecurityHeaders" Version="1.1.0"/>
-        <PackageVersion Include="NetArchTest.eNhancedEdition" Version="1.4.5"/>
-        <PackageVersion Include="NSubstitute" Version="5.3.0"/>
-        <PackageVersion Include="NSubstitute.Analyzers.CSharp" Version="1.0.17"/>
         <PackageVersion Include="OpenTelemetry.Exporter.Console" Version="1.12.0"/>
         <PackageVersion Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.12.0"/>
         <PackageVersion Include="OpenTelemetry.Exporter.Prometheus.AspNetCore" Version="1.12.0-beta.1"/>
@@ -55,13 +50,13 @@
         <PackageVersion Include="OpenTelemetry.Extensions.Propagators" Version="1.12.0"/>
         <PackageVersion Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.12.0"/>
         <PackageVersion Include="OpenTelemetry.Instrumentation.EntityFrameworkCore" Version="1.12.0-beta.2"/>
+        <PackageVersion Include="OpenTelemetry.Instrumentation.Hangfire" Version="1.12.0-beta.1"/>
         <PackageVersion Include="OpenTelemetry.Instrumentation.Http" Version="1.12.0"/>
         <PackageVersion Include="OpenTelemetry.Instrumentation.Process" Version="1.12.0-beta.1"/>
         <PackageVersion Include="OpenTelemetry.Instrumentation.Runtime" Version="1.12.0"/>
         <PackageVersion Include="OpenTelemetry.Instrumentation.StackExchangeRedis" Version="1.12.0-beta.2"/>
         <PackageVersion Include="OpenTelemetry.Resources.Container" Version="1.12.0-beta.1"/>
         <PackageVersion Include="OpenTelemetry.Resources.Host" Version="1.12.0-beta.1"/>
-        <PackageVersion Include="Respawn" Version="6.2.1"/>
         <PackageVersion Include="Riok.Mapperly" Version="4.2.1"/>
         <PackageVersion Include="Scrutor" Version="6.1.0"/>
         <PackageVersion Include="Serilog.AspNetCore" Version="9.0.0"/>
@@ -76,15 +71,11 @@
         <PackageVersion Include="Serilog.Sinks.Elasticsearch" Version="10.0.0"/>
         <PackageVersion Include="Serilog.Sinks.OpenTelemetry" Version="4.2.0"/>
         <PackageVersion Include="Serilog.Sinks.Seq" Version="9.0.0"/>
-        <PackageVersion Include="Serilog.Sinks.XUnit.Injectable" Version="4.0.138"/>
         <PackageVersion Include="SerilogTracing" Version="2.3.1"/>
         <PackageVersion Include="SerilogTracing.Expressions" Version="2.3.1"/>
         <PackageVersion Include="StyleCop.Analyzers" Version="1.2.0-beta.556"/>
-        <PackageVersion Include="Testcontainers.MsSql" Version="4.7.0"/>
-        <PackageVersion Include="Testcontainers.Redis" Version="4.7.0"/>
-        <PackageVersion Include="xunit.analyzers" Version="1.24.0"/>
-        <PackageVersion Include="xunit.runner.visualstudio" Version="3.1.4"/>
-        <PackageVersion Include="xunit.v3" Version="3.0.1"/>
+        <PackageVersion Include="TypedSignalR.Client.Attributes" Version="1.1.0"/>
+        <PackageVersion Include="TypedSignalR.Client.DevTools" Version="1.2.4"/>
         <PackageVersion Include="ZiggyCreatures.FusionCache" Version="2.4.0"/>
         <PackageVersion Include="ZiggyCreatures.FusionCache.AspNetCore.OutputCaching" Version="2.4.0"/>
         <PackageVersion Include="ZiggyCreatures.FusionCache.Backplane.StackExchangeRedis" Version="2.4.0"/>
