--- a/test/DotNetAtlas.ArchitectureTests/DotNetAtlas.ArchitectureTests.csproj
+++ b/test/DotNetAtlas.ArchitectureTests/DotNetAtlas.ArchitectureTests.csproj
@@ -1,40 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
-    <PropertyGroup>
-        <IsPackable>false</IsPackable>
-    </PropertyGroup>
-
+    <!-- Project-specific packages only (common packages in Directory.Build.props) -->
     <ItemGroup>
-        <PackageReference Include="coverlet.collector" />
-        <PackageReference Include="Microsoft.NET.Test.Sdk" />
-        <PackageReference Include="NetArchTest.eNhancedEdition" />
-        <PackageReference Include="xunit.v3" />
-        <PackageReference Include="xunit.runner.visualstudio">
-          <PrivateAssets>all</PrivateAssets>
-          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageReference>
-        <PackageReference Include="xunit.analyzers">
-          <PrivateAssets>all</PrivateAssets>
-          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageReference>
-        <PackageReference Include="AwesomeAssertions" />
-
-        <PackageReference Include="AwesomeAssertions.Analyzers">
-            <PrivateAssets>all</PrivateAssets>
-            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageReference>
-        <PackageReference Include="StyleCop.Analyzers">
-            <PrivateAssets>all</PrivateAssets>
-            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageReference>
+        <PackageReference Include="NetArchTest.eNhancedEdition"/>
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\src\DotNetAtlas.Api\DotNetAtlas.Api.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
-        <Using Include="Xunit" />
+        <ProjectReference Include="..\..\src\DotNetAtlas.Api\DotNetAtlas.Api.csproj"/>
     </ItemGroup>
 
 </Project>
