--- a/test/DotNetAtlas.FunctionalTests/DotNetAtlas.FunctionalTests.csproj
+++ b/test/DotNetAtlas.FunctionalTests/DotNetAtlas.FunctionalTests.csproj
@@ -1,41 +1,21 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
-    <PropertyGroup>
-        <IsPackable>false</IsPackable>
-    </PropertyGroup>
-
+    <!-- Project-specific packages only (common packages in Directory.Build.props) -->
     <ItemGroup>
-        <PackageReference Include="coverlet.collector" />
-        <PackageReference Include="FastEndpoints.Testing" />
-        <PackageReference Include="Microsoft.NET.Test.Sdk" />
-        <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" />
-        <PackageReference Include="Testcontainers.Redis" />
-        <PackageReference Include="xunit.v3" />
-        <PackageReference Include="xunit.runner.visualstudio" />
-        <PackageReference Include="xunit.analyzers" />
-        <PackageReference Include="Evolve" />
-        <PackageReference Include="Testcontainers.MsSql" />
-        <PackageReference Include="Serilog.Sinks.XUnit.Injectable" />
-        <PackageReference Include="Respawn" />
-        <PackageReference Include="AwesomeAssertions" />
-
-        <PackageReference Include="AwesomeAssertions.Analyzers">
-            <PrivateAssets>all</PrivateAssets>
-            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageReference>
-        <PackageReference Include="StyleCop.Analyzers">
-            <PrivateAssets>all</PrivateAssets>
-            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageReference>
+        <PackageReference Include="FastEndpoints.Testing"/>
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing"/>
+        <PackageReference Include="Microsoft.AspNetCore.SignalR.Client"/>
+        <PackageReference Include="Testcontainers.Redis"/>
+        <PackageReference Include="Evolve"/>
+        <PackageReference Include="Testcontainers.MsSql"/>
+        <PackageReference Include="Serilog.Sinks.XUnit.Injectable"/>
+        <PackageReference Include="Respawn"/>
+        <PackageReference Include="TypedSignalR.Client"/>
+        <PackageReference Include="NSubstitute"/>
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\src\DotNetAtlas.Api\DotNetAtlas.Api.csproj" />
-        <ProjectReference Include="..\DotNetAtlas.ArchitectureTests\DotNetAtlas.ArchitectureTests.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
-        <Using Include="Xunit" />
+        <ProjectReference Include="..\..\src\DotNetAtlas.Api\DotNetAtlas.Api.csproj"/>
+        <ProjectReference Include="..\DotNetAtlas.ArchitectureTests\DotNetAtlas.ArchitectureTests.csproj"/>
     </ItemGroup>
 
 </Project>
