--- a/.editorconfig
+++ b/.editorconfig
@@ -589,6 +589,9 @@ dotnet_diagnostic.CS8618.severity = suggestion
 # IDE0005
 dotnet_diagnostic.IDE0005.severity = suggestion
 
+# IDE0032
+dotnet_diagnostic.IDE0032.severity = suggestion
+
 # IDE0090
 dotnet_diagnostic.IDE0090.severity = none
 
