ci: validate pr title only in PRs

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,7 @@ permissions:
 
 jobs:
   validate-pr-title:
+    if: github.event_name == 'pull_request'
     permissions:
       contents: read
       pull-requests: write
